...
    const usersGateway = new UsersGateway();

    const { setToken, setUser } = React.useContext(AuthContext);
    const [showPassword, setShowPass] = React.useState(false);

    const initialValues = {
        email: "",
        password: "",
    };

    async function onSubmitSignIn(values: SignInRequest, formikHelpers: FormikHelpers<SignInRequest>): Promise<void> {
        try {
            const token = await authGateway.signIn(values);

...
        }
    }

    return (
        <View style={styles.view}>
            <Text size={"title1"} fontWeight={"semibold"} textAlign={"center"}>
                Welcome back
            </Text>
            <Formik initialValues={initialValues} validationSchema={signInSchema} onSubmit={onSubmitSignIn}>
                {({ values, errors, touched, handleChange, submitForm }) => (
                    <VStack space="13px" style={{ marginTop: 35 }}>
                        <FormControl isInvalid={!!(errors.email && touched.email)}>
                            <Input
...
                            _text={{ color: "darkBlue.500", fontWeight: "semibold" }}
                            isUnderlined={false}
                        >
                            Forgot password?
                        </Link>
                        <Button style={{ marginTop: 7 }} onPress={submitForm}>
                            Sign in
                        </Button>
                    </VStack>
                )}
            </Formik>
        </View>
    );
...
