...
                    <Text size={"subheadline"} fontWeight={"semibold"}>
                        Details
                    </Text>
                </VStack>
                <VStack space="4px">
                    <Pressable
                        testID="walletQRCodeButton"
                        style={styles.button}
                        onPress={() => navigation.navigate("WalletQRCodeScreen", { wallet })}
                    >
                        <Box style={styles.walletIconBackground}>
                            <FontAwesomeIcon icon={farQrCode} style={styles.walletIcon} size={20} />
                        </Box>
...
